# SKSE_Plugin_Development_101

./: README.md
CppDataTypes/: CMakeLists.txt  plugin.cpp  vcpkg-configuration.json
FormsAndObjects/: CMakeLists.txt  CMakePresets.json  plugin.cpp  vcpkg-configuration.json
HelloCpp/: CMakeLists.txt  main.cpp  run.bat  sample.ini  vcpkg.json
HelloNG/: CMakeLists.txt  CMakePresets.json  Logging.h  PCH.h  Plugin.cpp  README.md  build.bat  vcpkg-configuration.json  vcpkg.json
HelloSKSE/: CMakeLists.txt  plugin.cpp
HelloWorld/: CMakePresets.json  plugin.cpp
Logging/: CMakeLists.txt  plugin.cpp  vcpkg-configuration.json
ReadIniJsonYaml/: CMakeLists.txt  plugin.cpp  vcpkg.json
ReadIniJsonYaml/ConfigFileExamples/: example.ini  example.json  example.yaml
SaveGameData/: CMakeLists.txt  plugin.cpp
SaveGameData_WIP/: plugin.cpp
